# swcr

./: .gitignore  dummy_code.py  generate_manual.py  pyproject.toml
swcr/: command.txt  swcr.py
